service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wikijs-fe
  namespace: wikijs
spec:
  ports:
  - name: http
    port: 3000
    protocol: TCP
    targetPort: http
  selector:
    deploymentconfig: wikijs-fe
  sessionAffinity: None
  type: ClusterIP
