route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: wikijs-fe
  namespace: wikijs
spec:
  host: wikijs.apps.<clustername>
  port:
    targetPort: http
  tls:
    termination: edge
  to:
    kind: Service
    name: wikijs-fe
    weight: 100
  wildcardPolicy: None
